# prism-annotator

./: .gitignore  CITATION.cff  README.md  pyproject.toml
src/prism_annotator/: __init__.py  cli.py  config.py  data_loader.py  merge.py  models.py  output.py  pipeline.py  postprocess.py  prompts.py  relations.py  scaffold.py  schema.py  tanl_format.py  tanl_parser.py  visualize.py
src/prism_annotator/defaults/: config_template.yaml
src/prism_annotator/defaults/prompts/en/: entity_examples.yaml  entity_system.md  medical_relation_examples.yaml  medical_relation_system.md  time_relation_examples.yaml  time_relation_system.md
src/prism_annotator/defaults/prompts/ja/: entity_examples.yaml  entity_system.md  medical_relation_examples.yaml  medical_relation_system.md  time_relation_examples.yaml  time_relation_system.md
